--- a/recovery/root/init.recovery.exynos7884B.rc
+++ b/recovery/root/init.recovery.exynos7884B.rc
@@ -3,5 +3,6 @@ on fs
 
 on init
     write /proc/sys/kernel/hung_task_timeout_secs 0
+    chmod 0755 /sys/devices/virtual/camera/flash/rear_torch_flash
 
 on boot
