--- a/recovery/root/init.recovery.exynos7884B.rc
+++ b/recovery/root/init.recovery.exynos7884B.rc
@@ -4,5 +4,6 @@ on fs
 on init
     write /proc/sys/kernel/hung_task_timeout_secs 0
     chmod 0755 /sys/devices/virtual/camera/flash/rear_torch_flash
+    chmod 0755 /sys/devices/virtual/camera/flash/rear_flash
 
 on boot
