--- a/recovery/root/init.recovery.exynos7884B.rc
+++ b/recovery/root/init.recovery.exynos7884B.rc
@@ -5,5 +5,8 @@ on init
     write /proc/sys/kernel/hung_task_timeout_secs 0
     chmod 0755 /sys/devices/virtual/camera/flash/rear_torch_flash
     chmod 0755 /sys/devices/virtual/camera/flash/rear_flash
+    mkdir /tmp
+    symlink /sys/devices/virtual/camera/flash/rear_torch_flash /tmp/brightness
+    symlink /max_brightness /tmp/max_brightness
 
 on boot
